fix: home flex layout absolute bottom & spacing details

--- a/code/styles/helper.scss
+++ b/code/styles/helper.scss
@@ -5,3 +5,8 @@
 .ylf-font-serif {
   font-family: var(--ylf-font-serif);
 }
+
+.text-fill-transparent {
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
